# resonance

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
openspec/: project.md
src/: main.rs
src/audio/: mod.rs  scale.rs  synth.rs
src/input/: mod.rs
src/physics/: bodies.rs  collision.rs  gravity.rs  mod.rs  particles.rs
src/rendering/: mod.rs  particles.rs  star.rs  ui.rs  wells.rs
